fix: overflow scrolling in spectra turbo modals and trix editor

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -317,3 +317,6 @@ mark {
   margin-bottom: 0.15rem;
 }
 
+.trix-button-row {
+  @apply overflow-hidden
+}
